auto publishing updates to notebooks

--- a/about.ipynb
+++ b/about.ipynb
@@ -2,17 +2,56 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "245ed213",
+   "id": "4f8092d5",
    "metadata": {},
    "source": [
     "# About\n",
     "\n",
-    "This lecture series provides an introduction to quantitative economics using [Google JAX](https://github.com/google/jax)."
+    "Perhaps the single most notable feature of scientific computing in the past\n",
+    "two decades is the rise and rise of parallel computation.\n",
+    "\n",
+    "For example, the advanced artificial intelligence applications now shaking the\n",
+    "worlds of business and academia require massive computer power to train, and the\n",
+    "great majority of that computer power is supplied by GPUs.\n",
+    "\n",
+    "For us economists, with our ever-growing need for more compute cycles,\n",
+    "parallel computing provides both opportunities and new difficulties.\n",
+    "\n",
+    "The main difficulty we face vis-a-vis parallel computation is accessibility.\n",
+    "\n",
+    "Even for those with time to invest in careful parallelization of their programs,\n",
+    "exploiting the full power of parallel hardware is challenging for non-experts.\n",
+    "\n",
+    "Moreover, that hardware changes from year to year, so any human capital\n",
+    "associated with mastering intricacies of a particular GPU has a very high\n",
+    "depreciation rate.\n",
+    "\n",
+    "For these reasons, we find [Google JAX](https://github.com/google/jax) compelling.\n",
+    "\n",
+    "In short, JAX makes high performance and parallel computing accessible (and fun!).\n",
+    "\n",
+    "It provides a familiar array programming interface based on NumPy, and, as long as\n",
+    "some simple conventions are adhered to, this code compiles to extremely\n",
+    "efficient and well-parallelized machine code.\n",
+    "\n",
+    "One of the most agreeable features of JAX is that the same code set and be run on\n",
+    "either CPUs or GPUs, which allows users to test and develop locally, before\n",
+    "deploying to a more powerful machine for heavier computations.\n",
+    "\n",
+    "JAX is relatively easy to learn and highly portable, allowing us programmers to\n",
+    "focus on the algorithms we want to implement, rather than particular features of\n",
+    "our hardware.\n",
+    "\n",
+    "This lecture series provides an introduction to using Google JAX for\n",
+    "quantitative economics.\n",
+    "\n",
+    "The rest of this page provides some background information on JAX, notes on\n",
+    "how to run the lectures, and credits for our colleagues and RAs."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2ecea7e7",
+   "id": "012540bc",
    "metadata": {},
    "source": [
     "## What is JAX?\n",
@@ -30,9 +69,6 @@
     "- a just-in-time compiler  \n",
     "\n",
     "\n",
-    "One of the great benefits of JAX is that exactly the same code can be run either\n",
-    "on the CPU or on a hardware accelerator, such as a GPU or TPU.\n",
-    "\n",
     "In short, JAX delivers\n",
     "\n",
     "1. high execution speeds on CPUs due to efficient parallelization and JIT\n",
@@ -48,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a7f1071",
+   "id": "fe6a1703",
    "metadata": {},
    "source": [
     "## How to run these lectures\n",
@@ -76,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d23711ca",
+   "id": "124a7a42",
    "metadata": {},
    "source": [
     "## Credits\n",
@@ -96,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23d9f4d8",
+   "id": "d1b87438",
    "metadata": {},
    "source": [
     "## Prerequisites\n",
@@ -107,7 +143,7 @@
   }
  ],
  "metadata": {
-  "date": 1683608798.128505,
+  "date": 1684236578.4856145,
   "filename": "about.md",
   "kernelspec": {
    "display_name": "Python",
