--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a65ab86e",
+   "id": "bb36a2ce",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,21 +10,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae1a2017",
+   "id": "5f01f6ad",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
     "\n",
-    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
-    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`"
+    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "33365d65",
+   "id": "99ee6eb3",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46632c1d",
+   "id": "40564767",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94c93825",
+   "id": "333f2652",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d91f5320",
+   "id": "bc34fc67",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d940d80",
+   "id": "cc0fb2aa",
+   "metadata": {},
+   "source": [
+    "Let’s check the GPU we are running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66581e0d",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d39bd47",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -98,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c70bef74",
+   "id": "d38420f0",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a50660",
+   "id": "40fbde5c",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -118,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33e825c8",
+   "id": "ed716ed7",
    "metadata": {
     "hide-output": false
    },
@@ -137,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a501aa4e",
+   "id": "0981b4ac",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -176,7 +196,7 @@
     "\n",
     "<a id='equation-equation-aiy-rgk'></a>\n",
     "$$\n",
-    "r = A \\alpha  \\left( \\frac{N}{K} \\right)^{1 - \\alpha} - \\delta \\tag{11.1}\n",
+    "r = A \\alpha  \\left( \\frac{N}{K} \\right)^{1 - \\alpha} - \\delta \\tag{13.1}\n",
     "$$\n",
     "\n",
     "Using this expression and the firm’s first-order condition for labor, we can pin down\n",
@@ -185,7 +205,7 @@
     "\n",
     "<a id='equation-equation-aiy-wgr'></a>\n",
     "$$\n",
-    "w(r) = A  (1 - \\alpha)  (A \\alpha / (r + \\delta))^{\\alpha / (1 - \\alpha)} \\tag{11.2}\n",
+    "w(r) = A  (1 - \\alpha)  (A \\alpha / (r + \\delta))^{\\alpha / (1 - \\alpha)} \\tag{13.2}\n",
     "$$\n",
     "\n",
     "These parameters and equations are stored in the following class."
@@ -194,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd9a0c70",
+   "id": "5e366457",
    "metadata": {
     "hide-output": false
    },
@@ -230,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf091255",
+   "id": "827adb25",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -278,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "409e7869",
+   "id": "6bfcaad2",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -290,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff3465bb",
+   "id": "467ee2f2",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e23bb012",
+   "id": "ee3c5e5b",
    "metadata": {
     "hide-output": false
    },
@@ -342,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f682738b",
+   "id": "76b4a059",
    "metadata": {},
    "source": [
     "This is the vectorized version of the right-hand side of the Bellman equation\n",
@@ -358,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e346b81d",
+   "id": "a0819ec1",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a30780a9",
+   "id": "26a11d0f",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -398,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7dce738",
+   "id": "72ddb45a",
    "metadata": {
     "hide-output": false
    },
@@ -413,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc4dec0",
+   "id": "44447051",
    "metadata": {},
    "source": [
     "We need to know rewards at a given policy for policy iteration.\n",
@@ -431,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4cb64d2",
+   "id": "b7817aa7",
    "metadata": {
     "hide-output": false
    },
@@ -457,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe57b39",
+   "id": "164c7da4",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -484,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64bace02",
+   "id": "0e1ec441",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "125eb0ce",
+   "id": "b7610849",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -522,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b95445ef",
+   "id": "ddfa7900",
    "metadata": {
     "hide-output": false
    },
@@ -543,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1baef524",
+   "id": "c7315ef6",
    "metadata": {},
    "source": [
     "The following function is used for optimistic policy iteration."
@@ -552,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af18539e",
+   "id": "3b0eb6a7",
    "metadata": {
     "hide-output": false
    },
@@ -587,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb3f27f1",
+   "id": "4ab358a3",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -598,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f39cca49",
+   "id": "1ba8bdce",
    "metadata": {
     "hide-output": false
    },
@@ -626,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50950dd6",
+   "id": "da5ee9aa",
    "metadata": {},
    "source": [
     "We can also solve the problem using optimistic policy iteration."
@@ -635,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b02a904a",
+   "id": "73c86a70",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "861f54df",
+   "id": "3e43220b",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -668,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0890a5f",
+   "id": "1c8def61",
    "metadata": {
     "hide-output": false
    },
@@ -685,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb96173",
+   "id": "82b1be25",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a587504",
+   "id": "3caf834e",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae2d4fd8",
+   "id": "970f3d5c",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -721,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a14a479f",
+   "id": "b6dd6927",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4eed69e",
+   "id": "3d2ae309",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -763,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9bf26ca",
+   "id": "a0155fc6",
    "metadata": {
     "hide-output": false
    },
@@ -802,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38ec8278",
+   "id": "a9f668e9",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -811,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c01b65a",
+   "id": "83c72da3",
    "metadata": {
     "hide-output": false
    },
@@ -825,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74079e73",
+   "id": "a3f05cc4",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -834,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f3cb398",
+   "id": "a750252b",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44ebabd4",
+   "id": "a778a1ff",
    "metadata": {},
    "source": [
     "Now we are ready to compute capital supply by households given wages and interest rates."
@@ -854,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793837df",
+   "id": "56a08987",
    "metadata": {
     "hide-output": false
    },
@@ -879,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cccedff4",
+   "id": "75889a14",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -903,7 +923,7 @@
     "In practice, once parameter values are set, we can check for an SREE by the following steps\n",
     "\n",
     "1. pick a proposed quantity $ K $ for aggregate capital  \n",
-    "1. determine corresponding prices, with interest rate $ r $ determined by [(11.1)](#equation-equation-aiy-rgk) and a wage rate $ w(r) $ as given in [(11.2)](#equation-equation-aiy-wgr).  \n",
+    "1. determine corresponding prices, with interest rate $ r $ determined by [(13.1)](#equation-equation-aiy-rgk) and a wage rate $ w(r) $ as given in [(13.2)](#equation-equation-aiy-wgr).  \n",
     "1. determine the common optimal savings policy of the households given these prices  \n",
     "1. compute aggregate capital as the mean of steady state capital given this savings policy  \n",
     "\n",
@@ -915,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e05b6095",
+   "id": "91dfd081",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -930,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ada4456",
+   "id": "67a584aa",
    "metadata": {
     "hide-output": false
    },
@@ -948,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e46bb494",
+   "id": "6ac48a9f",
    "metadata": {
     "hide-output": false
    },
@@ -967,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a292437",
+   "id": "c30bfa89",
    "metadata": {
     "hide-output": false
    },
@@ -988,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b67dda2",
+   "id": "d32cde63",
    "metadata": {},
    "source": [
     "Here’s a plot of the excess demand function.\n",
@@ -999,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3d287db",
+   "id": "8dc34af8",
    "metadata": {
     "hide-output": false
    },
@@ -1015,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49c0a439",
+   "id": "69567419",
    "metadata": {
     "hide-output": false
    },
@@ -1031,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "365556e9",
+   "id": "7d27f313",
    "metadata": {
     "hide-output": false
    },
@@ -1047,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af094808",
+   "id": "139b25d8",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1061,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "644faf6e",
+   "id": "38172610",
    "metadata": {
     "hide-output": false
    },
@@ -1088,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53241080",
+   "id": "84ee64e8",
    "metadata": {},
    "source": [
     "Now we call the bisection function on excess demand."
@@ -1097,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed8a736f",
+   "id": "a872b63c",
    "metadata": {
     "hide-output": false
    },
@@ -1111,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5706ba6",
+   "id": "1d3b2389",
    "metadata": {
     "hide-output": false
    },
@@ -1126,7 +1146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f86279f",
+   "id": "ccfc89cf",
    "metadata": {},
    "source": [
     "Notice how quickly we can compute the equilibrium capital stock using a simple\n",
@@ -1135,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73d7ad11",
+   "id": "10134176",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1143,10 +1163,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c9aedd5",
+   "id": "5fd00ddb",
    "metadata": {},
    "source": [
-    "## Exercise 11.1\n",
+    "## Exercise 13.1\n",
     "\n",
     "Using the default household and firm model, produce a graph\n",
     "showing the behaviour of equilibrium capital stock with the increase in $ \\beta $."
@@ -1154,16 +1174,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd01c211",
+   "id": "4e389536",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 11.1](https://jax.quantecon.org/#aygr_ex1)"
+    "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#aygr_ex1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "607eefe2",
+   "id": "1a780de3",
    "metadata": {
     "hide-output": false
    },
@@ -1181,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f145f6f",
+   "id": "c39d23cc",
    "metadata": {
     "hide-output": false
    },
@@ -1196,10 +1216,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6419a170",
+   "id": "1ac1ae41",
    "metadata": {},
    "source": [
-    "## Exercise 11.2\n",
+    "## Exercise 13.2\n",
     "\n",
     "Switch to the CRRA utility function\n",
     "\n",
@@ -1219,10 +1239,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dec0e409",
+   "id": "0b0b2e38",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 11.2](https://jax.quantecon.org/#aygr_ex2)\n",
+    "## Solution to[ Exercise 13.2](https://jax.quantecon.org/#aygr_ex2)\n",
     "\n",
     "Let’s define the utility function"
    ]
@@ -1230,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4c6904b",
+   "id": "c7dd9169",
    "metadata": {
     "hide-output": false
    },
@@ -1243,7 +1263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5799e7b",
+   "id": "9b7b8dfb",
    "metadata": {},
    "source": [
     "We need to re-compile all the jitted functions in order notice the change\n",
@@ -1253,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "470422ed",
+   "id": "b6d18151",
    "metadata": {
     "hide-output": false
    },
@@ -1271,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c06710c",
+   "id": "ff0b99cb",
    "metadata": {},
    "source": [
     "Now, let’s plot the the demand for capital by firms"
@@ -1280,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b0e0db7",
+   "id": "18e0389a",
    "metadata": {
     "hide-output": false
    },
@@ -1306,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8a063d3",
+   "id": "01fe8288",
    "metadata": {
     "hide-output": false
    },
@@ -1327,7 +1347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fb225d6",
+   "id": "3cd00de0",
    "metadata": {},
    "source": [
     "Compute the equilibrium"
@@ -1336,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7b42636",
+   "id": "b5a98ecf",
    "metadata": {
     "hide-output": false
    },
@@ -1351,7 +1371,7 @@
   }
  ],
  "metadata": {
-  "date": 1683608798.1830206,
+  "date": 1684236578.5421486,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
