--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,33 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "257f6b14",
+   "id": "0b7ca136",
    "metadata": {},
    "source": [
-    "# Quantitative Economics with Python (JAX)\n",
+    "# Quantitative Economics with JAX\n",
     "\n",
-    "This website presents a set of lectures on quantitative economic modeling, designed and written by\n",
-    "[Thomas J. Sargent](http://www.tomsargent.com/) and [John Stachurski](https://johnstachurski.net/)\n",
-    "specifically using [JAX](https://jax.readthedocs.io) and accelerating using the `GPU`.\n",
-    "\n",
-    "For an overview of the series, see [this page](https://quantecon.org/projects/#filter=lecture)"
+    "This website presents a set of lectures on quantitative economic modeling\n",
+    "using GPUs and [Google JAX](https://jax.readthedocs.io).   The lectures\n",
+    "are designed and written by [Thomas J. Sargent](http://www.tomsargent.com/) and\n",
+    "[John Stachurski](https://johnstachurski.net/)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a3193b9f",
+   "id": "c01d1baa",
    "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
     "- [About](https://jax.quantecon.org/about.html)\n",
     "- [An Introduction to JAX](https://jax.quantecon.org/jax_intro.html)\n",
-    "- [Newton’s Method via JAX](https://jax.quantecon.org/newtons_method.html)"
+    "- [Newton’s Method via JAX](https://jax.quantecon.org/newtons_method.html)\n",
+    "- [An Asset Pricing Problem](https://jax.quantecon.org/markov_asset.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c1b368c3",
+   "id": "60cb7a68",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38444c9c",
+   "id": "cb69517d",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -48,13 +48,14 @@
     "- [Shortest Paths](https://jax.quantecon.org/short_path.html)\n",
     "- [Optimal Investment](https://jax.quantecon.org/opt_invest.html)\n",
     "- [Optimal Savings](https://jax.quantecon.org/opt_savings.html)\n",
+    "- [Endogenous Grid Method](https://jax.quantecon.org/ifp_egm.html)\n",
     "- [Default Risk and Income Fluctuations](https://jax.quantecon.org/arellano.html)\n",
     "- [The Aiyagari Model](https://jax.quantecon.org/aiyagari_jax.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "35bf1ad5",
+   "id": "3a2670bf",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -66,14 +67,14 @@
   }
  ],
  "metadata": {
-  "date": 1683608798.2610154,
+  "date": 1684236578.671103,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
    "language": "python3",
    "name": "python3"
   },
-  "title": "Quantitative Economics with Python (JAX)"
+  "title": "Quantitative Economics with JAX"
  },
  "nbformat": 4,
  "nbformat_minor": 5
