--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "51122355",
+   "id": "fe898c63",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a2af5c0",
+   "id": "f7b87093",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
     "\n",
-    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
-    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
+    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
     "\n",
     "\n",
     "<a id='index-0'></a>"
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efe117f7",
+   "id": "46efe623",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aa7625d",
+   "id": "01436540",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb90c9d",
+   "id": "371a6d54",
    "metadata": {
     "hide-output": false
    },
@@ -70,31 +70,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "531e15ae",
+   "id": "31801f5d",
    "metadata": {},
    "source": [
-    "Let’s check the backend used by JAX and the devices available"
+    "Let’s check the GPU we are running"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d499eb3e",
+   "id": "6be04269",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "# Check if JAX is using GPU\n",
-    "print(f\"JAX backend: {jax.devices()[0].platform}\")\n",
-    "\n",
-    "# Check the devices available for JAX\n",
-    "print(jax.devices())"
+    "!nvidia-smi"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "676985e8",
+   "id": "16993372",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcaa34ff",
+   "id": "4246b8c7",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3172a64b",
+   "id": "776cea0e",
    "metadata": {},
    "source": [
     "## Example 1: marginal distributions\n",
@@ -166,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c511ddbc",
+   "id": "d80dffdd",
    "metadata": {
     "hide-output": false
    },
@@ -207,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ebb6601",
+   "id": "bd42b717",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -231,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d90db05d",
+   "id": "2cb27ca9",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e5e6d27",
+   "id": "37e44d7b",
    "metadata": {
     "hide-output": false
    },
@@ -297,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "056b72cb",
+   "id": "93b7fa3c",
    "metadata": {},
    "source": [
     "Note that we did not JIT-compile the outer loop, since\n",
@@ -308,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e1cb398",
+   "id": "ee15d55d",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -321,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43a9470c",
+   "id": "1c25b690",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8eefda1",
+   "id": "f618feab",
    "metadata": {},
    "source": [
     "The benefit of the `lax.scan` implementation is that we compile the whole\n",
@@ -372,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3449d5b",
+   "id": "c97a6851",
    "metadata": {
     "hide-output": false
    },
@@ -393,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21be25eb",
+   "id": "3c57b981",
    "metadata": {},
    "source": [
     "Notice that by $ t=500 $ or $ t=750 $ the densities are barely\n",
@@ -411,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7de758e",
+   "id": "075c34b2",
    "metadata": {
     "hide-output": false
    },
@@ -434,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a970c57",
+   "id": "817a4fd7",
    "metadata": {},
    "source": [
     "## Example 2: restock frequency\n",
@@ -454,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88b5c541",
+   "id": "a4e50a45",
    "metadata": {
     "hide-output": false
    },
@@ -496,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4242c4d",
+   "id": "2f58fdc3",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89d3f62",
+   "id": "6bab5901",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -520,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b32dd4a5",
+   "id": "4bb962ff",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "598d703a",
+   "id": "5618c1ee",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -576,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "138c2f91",
+   "id": "81eba59c",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +584,7 @@
   }
  ],
  "metadata": {
-  "date": 1683608798.4149451,
+  "date": 1684236578.6975083,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
