--- a/kesten_processes.ipynb
+++ b/kesten_processes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce0f18a5",
+   "id": "71631d35",
    "metadata": {},
    "source": [
     "# Kesten Processes and Firm Dynamics\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "950f6c9d",
+   "id": "49bb5fde",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -25,16 +25,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b372fd5",
+   "id": "98d48ef4",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
     "\n",
-    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
-    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
+    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
     "\n",
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
    ]
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "587066c6",
+   "id": "abcda696",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbb3c8ea",
+   "id": "7b74f5d7",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fee3a1ac",
+   "id": "8c1e6d8a",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7eddad77",
+   "id": "1612cf80",
+   "metadata": {},
+   "source": [
+    "Let’s check the GPU we are running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1aed5df",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6973af5d",
    "metadata": {},
    "source": [
     "## Kesten processes\n",
@@ -102,7 +122,7 @@
     "\n",
     "<a id='equation-kesproc'></a>\n",
     "$$\n",
-    "X_{t+1} = a_{t+1} X_t + \\eta_{t+1} \\tag{5.1}\n",
+    "X_{t+1} = a_{t+1} X_t + \\eta_{t+1} \\tag{6.1}\n",
     "$$\n",
     "\n",
     "where $ \\{a_t\\}_{t \\geq 1} $ and $ \\{\\eta_t\\}_{t \\geq 1} $ are IID\n",
@@ -121,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94b98ccd",
+   "id": "69969458",
    "metadata": {},
    "source": [
     "### Application: firm dynamics\n",
@@ -131,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0630fe5a",
+   "id": "6466971e",
    "metadata": {},
    "source": [
     "#### Gibrat’s law\n",
@@ -148,7 +168,7 @@
     "\n",
     "<a id='equation-firm-dynam-gb'></a>\n",
     "$$\n",
-    "\\frac{s_{t+1}}{s_t} = a_{t+1} \\tag{5.2}\n",
+    "\\frac{s_{t+1}}{s_t} = a_{t+1} \\tag{6.2}\n",
     "$$\n",
     "\n",
     "for some positive IID sequence $ \\{a_t\\} $.\n",
@@ -156,12 +176,12 @@
     "Subsequent empirical research has shown that this specification is not accurate,\n",
     "particularly for small firms.\n",
     "\n",
-    "However, we can get close to the data by modifying [(5.2)](#equation-firm-dynam-gb) to\n",
+    "However, we can get close to the data by modifying [(6.2)](#equation-firm-dynam-gb) to\n",
     "\n",
     "\n",
     "<a id='equation-firm-dynam'></a>\n",
     "$$\n",
-    "s_{t+1} = a_{t+1} s_t + b_{t+1} \\tag{5.3}\n",
+    "s_{t+1} = a_{t+1} s_t + b_{t+1} \\tag{6.3}\n",
     "$$\n",
     "\n",
     "where $ \\{a_t\\} $ and $ \\{b_t\\} $ are both IID and independent of each\n",
@@ -172,19 +192,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9e94f0d",
+   "id": "036d3b82",
    "metadata": {},
    "source": [
     "#### Heavy tails\n",
     "\n",
     "If the conditions of the [Kesten–Goldie\n",
     "Theorem](https://python.quantecon.org/kesten_processes.html#the-kestengoldie-theorem)\n",
-    "are satisfied, then [(5.3)](#equation-firm-dynam) implies that the firm size distribution\n",
+    "are satisfied, then [(6.3)](#equation-firm-dynam) implies that the firm size distribution\n",
     "will have Pareto tails.\n",
     "\n",
     "This matches empirical findings across many data sets.\n",
     "\n",
-    "But there is another unrealistic aspect of the firm dynamics specified in [(5.3)](#equation-firm-dynam) that we need to address: it ignores entry and exit.\n",
+    "But there is another unrealistic aspect of the firm dynamics specified in [(6.3)](#equation-firm-dynam) that we need to address: it ignores entry and exit.\n",
     "\n",
     "In any given period and in any given market, we observe significant numbers of\n",
     "firms entering and exiting the market.\n",
@@ -195,15 +215,15 @@
     "<a id='equation-firm-dynam-ee'></a>\n",
     "$$\n",
     "s_{t+1} = e_{t+1} \\mathbb{1}\\{s_t < \\bar s\\} +\n",
-    "    (a_{t+1} s_t + b_{t+1}) \\mathbb{1}\\{s_t \\geq \\bar s\\} \\tag{5.4}\n",
+    "    (a_{t+1} s_t + b_{t+1}) \\mathbb{1}\\{s_t \\geq \\bar s\\} \\tag{6.4}\n",
     "$$\n",
     "\n",
-    "The motivation behind and interpretation of [(5.4)](#equation-firm-dynam-ee) can be found in\n",
+    "The motivation behind and interpretation of [(6.4)](#equation-firm-dynam-ee) can be found in\n",
     "[our earlier Kesten process lecture](https://python.quantecon.org/kesten_processes.html).\n",
     "\n",
     "What can we say about dynamics?\n",
     "\n",
-    "Although [(5.4)](#equation-firm-dynam-ee) is not a Kesten process, it does update in the\n",
+    "Although [(6.4)](#equation-firm-dynam-ee) is not a Kesten process, it does update in the\n",
     "same way as a Kesten process when $ s_t $ is large.\n",
     "\n",
     "So perhaps its stationary distribution still has Pareto tails?\n",
@@ -223,13 +243,13 @@
     "In the simulation, we assume that each of $ a_t, b_t $ and $ e_t $ is lognormal.\n",
     "\n",
     "Here’s code to update a cross-section of firms according to the dynamics in\n",
-    "[(5.4)](#equation-firm-dynam-ee)."
+    "[(6.4)](#equation-firm-dynam-ee)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba46d81",
+   "id": "78f15941",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6315d26a",
+   "id": "0fcba099",
    "metadata": {},
    "source": [
     "Now we write a for loop that repeatedly calls this function, to push a\n",
@@ -263,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fccdbd69",
+   "id": "0cccc5db",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +325,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "274f410c",
+   "id": "c44e424b",
+   "metadata": {},
+   "source": [
+    "Running the above function again so we can see the speed with and without compile time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1346fe2c",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "%time data = generate_draws().block_until_ready()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75ca435c",
    "metadata": {},
    "source": [
     "Notice that we do not JIT-compile the `for` loops, since\n",
@@ -321,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1020cf2b",
+   "id": "1b30707a",
    "metadata": {
     "hide-output": false
    },
@@ -339,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9d49367",
+   "id": "d19b127c",
    "metadata": {},
    "source": [
     "The plot produces a straight line, consistent with a Pareto tail."
@@ -347,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df87e5f9",
+   "id": "8c35d283",
    "metadata": {},
    "source": [
     "#### Alternative implementation with `lax.scan`\n",
@@ -372,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16e26ad5",
+   "id": "52b3233b",
    "metadata": {
     "hide-output": false
    },
@@ -419,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62b25c0b",
+   "id": "4fc71eec",
    "metadata": {},
    "source": [
     "In this case, `M` is small enough for the code to run and\n",
@@ -429,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f0365b4",
+   "id": "01bf4487",
    "metadata": {
     "hide-output": false
    },
@@ -440,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88bbcc3d",
+   "id": "6c29ca33",
    "metadata": {},
    "source": [
     "Here we produce the same rank-size plot:"
@@ -449,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfb2f58b",
+   "id": "9f7fa3af",
    "metadata": {
     "hide-output": false
    },
@@ -467,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77a20ee6",
+   "id": "7d89c9f8",
    "metadata": {},
    "source": [
     "Let’s rerun the `for` loop version on smaller `M` to compare the speed"
@@ -476,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0b86a1d",
+   "id": "6079c09b",
    "metadata": {
     "hide-output": false
    },
@@ -487,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5bc86e8",
+   "id": "5e0be778",
    "metadata": {},
    "source": [
     "We see that the `lax.scan` version is faster than the `for` loop version\n",
@@ -496,7 +536,7 @@
   }
  ],
  "metadata": {
-  "date": 1683608798.511543,
+  "date": 1684236578.7993577,
   "filename": "kesten_processes.md",
   "kernelspec": {
    "display_name": "Python",
