--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8376b5ff",
+   "id": "a9a3640c",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,21 +10,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e6544a7",
+   "id": "411feafa",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
     "\n",
-    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
-    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`"
+    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "502a33c8",
+   "id": "ae748225",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6646b2bf",
+   "id": "828232b5",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68a821e0",
+   "id": "3aa2ccc5",
+   "metadata": {},
+   "source": [
+    "Let’s check the GPU we are running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be3e0a23",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4c5bfc5",
    "metadata": {},
    "source": [
     "## The Equilibrium Problem\n",
@@ -72,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "120115b4",
+   "id": "c47c39d1",
    "metadata": {},
    "source": [
     "### The Two Goods Market Equilibrium\n",
@@ -128,7 +148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b17ab693",
+   "id": "b05c0d3a",
    "metadata": {},
    "source": [
     "### A High-Dimensional Version\n",
@@ -160,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c429307",
+   "id": "8cff4251",
    "metadata": {
     "hide-output": false
    },
@@ -172,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebd60b40",
+   "id": "cd52a579",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -182,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1199f98",
+   "id": "7cc8cbde",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -207,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff827e8",
+   "id": "d5e18280",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ef71863",
+   "id": "4b08080c",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -248,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b75085",
+   "id": "88020241",
    "metadata": {
     "hide-output": false
    },
@@ -272,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcba3ec8",
+   "id": "90eb0492",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -281,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17f9c333",
+   "id": "69c1de2d",
    "metadata": {
     "hide-output": false
    },
@@ -292,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb8775dc",
+   "id": "dce07f6d",
    "metadata": {},
    "source": [
     "By leveraging the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -303,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "260fed50",
+   "id": "5385de78",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2ae6de2",
+   "id": "edb2a665",
    "metadata": {
     "hide-output": false
    },
@@ -328,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf819efa",
+   "id": "4d50e54d",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -338,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42179d4f",
+   "id": "a62481ae",
    "metadata": {
     "hide-output": false
    },
@@ -356,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba61ce9",
+   "id": "876f068a",
    "metadata": {
     "hide-output": false
    },
@@ -368,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79c907e6",
+   "id": "12656141",
    "metadata": {},
    "source": [
     "The result is also less accurate."
@@ -376,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d739154",
+   "id": "64351053",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -384,12 +404,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc68f5b2",
+   "id": "cf5a78af",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
     "\n",
-    "Consider a three-dimensional extension of the Solow fixed point problem with\n",
+    "Consider a three-dimensional extension of [the Solow fixed point\n",
+    "problem](https://python.quantecon.org/newton_method.html#the-solow-model) with\n",
     "\n",
     "$$\n",
     "A = \\begin{pmatrix}\n",
@@ -443,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "613976b2",
+   "id": "1d04b90d",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -454,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f977cd54",
+   "id": "9c2d7d45",
    "metadata": {
     "hide-output": false
    },
@@ -473,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d67cf923",
+   "id": "97034d95",
    "metadata": {},
    "source": [
     "Then define the multivariate version of the formula for the [law of motion of captial](https://python.quantecon.org/newton_method.html#solow)"
@@ -482,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "187a70cb",
+   "id": "fbfdd140",
    "metadata": {
     "hide-output": false
    },
@@ -494,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afce635d",
+   "id": "c75efa26",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -503,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af6a83be",
+   "id": "5dc8fac7",
    "metadata": {
     "hide-output": false
    },
@@ -520,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "126ec224",
+   "id": "50bbb72a",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values given the well-defined property of this question.\n",
@@ -533,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79e1560e",
+   "id": "cd97ce3a",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "136e938c",
+   "id": "e54b2515",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -555,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75a66a86",
+   "id": "b7810939",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +595,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e9374a0",
+   "id": "6a006c80",
    "metadata": {},
    "source": [
     "The result is very close to the ground truth but still slightly different.\n",
@@ -585,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8330117b",
+   "id": "181ad77e",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8fac5b3",
+   "id": "d2e784df",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -610,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c2d0dea",
+   "id": "e13e65a9",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -656,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73b12373",
+   "id": "b96d8cf7",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -667,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69cca4a5",
+   "id": "de9c0264",
    "metadata": {
     "hide-output": false
    },
@@ -686,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a422ebb4",
+   "id": "bd90e1a2",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -695,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "246811a9",
+   "id": "ce7e79fe",
    "metadata": {
     "hide-output": false
    },
@@ -714,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7122eb59",
+   "id": "149d4331",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -727,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34304ec4",
+   "id": "667ddd4e",
    "metadata": {
     "hide-output": false
    },
@@ -738,7 +759,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d0f988d",
+   "id": "1a9f5aaf",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -746,7 +767,7 @@
   }
  ],
  "metadata": {
-  "date": 1683608798.550065,
+  "date": 1684236579.0304594,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
