--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "51b85f6b",
+   "id": "924c8603",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c80fa2c8",
+   "id": "5aabfbb6",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
     "\n",
-    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
-    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
+    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
     "\n",
     "We require the following library to be installed."
    ]
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "853fcc54",
+   "id": "92d37139",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85aca379",
+   "id": "068af9cf",
    "metadata": {},
    "source": [
     "A monopolist faces inverse demand\n",
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "efb761db",
+   "id": "818b75f2",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1980fcbd",
+   "id": "25dceead",
+   "metadata": {},
+   "source": [
+    "Let’s check the GPU we are running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e001433",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "193fabc5",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -108,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54768dbe",
+   "id": "bc2e4bdd",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b524173",
+   "id": "8052d77d",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -128,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c9e85f1",
+   "id": "023cd2cd",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0220a20",
+   "id": "bced473d",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -168,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2cc2c4d",
+   "id": "e61cc435",
    "metadata": {
     "hide-output": false
    },
@@ -202,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d738bcfc",
+   "id": "d0ae2744",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -218,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2633c98",
+   "id": "459b3245",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "386f2a26",
+   "id": "9580e0b4",
    "metadata": {},
    "source": [
     "Define a function to compute the current rewards given policy $ \\sigma $."
@@ -264,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c44e62a6",
+   "id": "f47216aa",
    "metadata": {
     "hide-output": false
    },
@@ -296,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deb3fb9d",
+   "id": "64c2c6ae",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -305,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d45aebf8",
+   "id": "7d0f4ff2",
    "metadata": {
     "hide-output": false
    },
@@ -320,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bce8733",
+   "id": "2b905df8",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -329,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "372d3381",
+   "id": "0a18be42",
    "metadata": {
     "hide-output": false
    },
@@ -344,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d81e17e",
+   "id": "0987068d",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -353,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "529c9641",
+   "id": "9f3a50b0",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa0f72aa",
+   "id": "f2dba2f8",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -439,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a54f3646",
+   "id": "66713992",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee0ca913",
+   "id": "2799e4ff",
    "metadata": {},
    "source": [
     "Define a function to get the value $ v_{\\sigma} $ of policy\n",
@@ -478,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa0d685f",
+   "id": "22286b9d",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a89ec14",
+   "id": "8f74a38b",
    "metadata": {},
    "source": [
     "Now we define the solvers, which implement VFI, HPI and OPI."
@@ -512,7 +532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11ce5617",
+   "id": "31dff0c5",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a75366b",
+   "id": "37a2f0c1",
    "metadata": {
     "hide-output": false
    },
@@ -558,7 +578,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c48c17d",
+   "id": "ef62bd7b",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53a541d0",
+   "id": "0e1441b3",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c702812b",
+   "id": "d9ffd1b0",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6aecf90a",
+   "id": "d66a305a",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56f4815e",
+   "id": "441f4131",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -642,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "824ce086",
+   "id": "582c5c0b",
    "metadata": {
     "hide-output": false
    },
@@ -658,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b99492a",
+   "id": "c6efbbf0",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f27a07d",
+   "id": "e0ee67fa",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -685,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec4c3540",
+   "id": "c106c73b",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a5d8149",
+   "id": "4063df93",
    "metadata": {
     "hide-output": false
    },
@@ -713,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "555c16e1",
+   "id": "e1ef07ac",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86a8b8ee",
+   "id": "3f241bc4",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "676d9cd2",
+   "id": "9bad2580",
    "metadata": {
     "hide-output": false
    },
@@ -769,7 +789,7 @@
   }
  ],
  "metadata": {
-  "date": 1683608798.5843773,
+  "date": 1684236579.0668857,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
