--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "369946b8",
+   "id": "cbb7a457",
    "metadata": {},
    "source": [
     "# Optimal Savings"
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "323643b5",
+   "id": "8e2ad41b",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
     "\n",
-    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
-    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
+    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
     "\n",
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
    ]
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e51b847",
+   "id": "18228ac7",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4865da1f",
+   "id": "4466c839",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a081f56",
+   "id": "83d44b80",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe192dd",
+   "id": "88c59888",
+   "metadata": {},
+   "source": [
+    "Let’s check the GPU we are running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66b3fc2b",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "831fac3c",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -75,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38d6a63b",
+   "id": "d5730dc6",
    "metadata": {
     "hide-output": false
    },
@@ -86,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ec94a34",
+   "id": "0ce02d78",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -117,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e154e4d",
+   "id": "838e33cf",
    "metadata": {
     "hide-output": false
    },
@@ -148,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54ab327b",
+   "id": "747898fe",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -159,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef99b965",
+   "id": "f8af162d",
    "metadata": {
     "hide-output": false
    },
@@ -172,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2ed279",
+   "id": "f3925fc0",
    "metadata": {
     "hide-output": false
    },
@@ -198,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4d829f",
+   "id": "8ef71c1f",
    "metadata": {
     "hide-output": false
    },
@@ -226,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb10e64b",
+   "id": "8bb650b3",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -235,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "803b7d94",
+   "id": "77a95aa1",
    "metadata": {
     "hide-output": false
    },
@@ -273,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db6814e3",
+   "id": "2263acc3",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -284,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1695db8",
+   "id": "c8abf13e",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e6acfb5",
+   "id": "ffc64cc4",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6bfaf12",
+   "id": "de595bf9",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -356,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4684c27a",
+   "id": "e222dcb4",
    "metadata": {
     "hide-output": false
    },
@@ -369,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cad7ca07",
+   "id": "32197cec",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -378,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "278ef518",
+   "id": "bad0eccb",
    "metadata": {
     "hide-output": false
    },
@@ -391,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56bb14da",
+   "id": "17ba18d6",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -430,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a812a5b",
+   "id": "74dabf06",
    "metadata": {
     "hide-output": false
    },
@@ -455,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c035f23",
+   "id": "c340c373",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b69eec09",
+   "id": "f3ce2923",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -507,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4613f22d",
+   "id": "1f17bd05",
    "metadata": {
     "hide-output": false
    },
@@ -524,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26ea960f",
+   "id": "c24017a6",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -535,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b168eff5",
+   "id": "7b7ead58",
    "metadata": {
     "hide-output": false
    },
@@ -555,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "647d6c7d",
+   "id": "2c087c19",
    "metadata": {
     "hide-output": false
    },
@@ -580,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e54bb7c",
+   "id": "300aa642",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc3064f8",
+   "id": "1ada5ae8",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -613,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4e9f614",
+   "id": "ed429ee0",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4277ef01",
+   "id": "ce7e3d84",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -648,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20b963dc",
+   "id": "59e7623c",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c42b859",
+   "id": "00e5c3ff",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a93a8ee",
+   "id": "d8285b32",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e44232af",
+   "id": "11a3c81c",
    "metadata": {
     "hide-output": false
    },
@@ -708,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a98f4a7c",
+   "id": "f96bd44b",
    "metadata": {
     "hide-output": false
    },
@@ -744,7 +764,7 @@
   }
  ],
  "metadata": {
-  "date": 1683608798.6171565,
+  "date": 1684236579.1013305,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
