--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a5907314",
+   "id": "0b0c04fe",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,21 +10,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12ab026",
+   "id": "a6a0cbe0",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
     "\n",
-    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
-    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`"
+    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "919d3042",
+   "id": "26e1a13e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb2fdb4",
+   "id": "6372257a",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8f5495a",
+   "id": "d98e26b4",
+   "metadata": {},
+   "source": [
+    "Let’s check the GPU we are running"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0b2c5eb",
+   "metadata": {
+    "hide-output": false
+   },
+   "outputs": [],
+   "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c9f585c",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -64,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d80b59f",
+   "id": "cb24bf47",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -79,7 +99,7 @@
     "\n",
     "<a id='equation-spguess'></a>\n",
     "$$\n",
-    "J_0(v) = 0 \\text{ for all } v \\tag{7.1}\n",
+    "J_0(v) = 0 \\text{ for all } v \\tag{8.1}\n",
     "$$\n",
     "\n",
     "Now\n",
@@ -97,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7109db91",
+   "id": "4ec5a155",
    "metadata": {
     "hide-output": false
    },
@@ -115,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f640834e",
+   "id": "40d1edb9",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -130,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f0a6190",
+   "id": "29310bf2",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c2f9a4b",
+   "id": "0a597910",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -166,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d3419b3",
+   "id": "f9a6941a",
    "metadata": {
     "hide-output": false
    },
@@ -180,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b61e2c4",
+   "id": "c35b6298",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5d0d652",
+   "id": "16b1ee10",
    "metadata": {
     "hide-output": false
    },
@@ -214,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beafc15c",
+   "id": "8dcb9bab",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -223,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd768ff2",
+   "id": "2a201f4c",
    "metadata": {
     "hide-output": false
    },
@@ -236,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "752d16cd",
+   "id": "0b6b9230",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -245,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83076e97",
+   "id": "fe0bb744",
    "metadata": {
     "hide-output": false
    },
@@ -258,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57dc93f9",
+   "id": "a2aca428",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -268,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "886906b4",
+   "id": "13cef768",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -276,10 +296,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e152420",
+   "id": "00858558",
    "metadata": {},
    "source": [
-    "## Exercise 7.1\n",
+    "## Exercise 8.1\n",
     "\n",
     "The text below describes a weighted directed graph.\n",
     "\n",
@@ -300,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60b279b8",
+   "id": "8f3fcfa0",
    "metadata": {
     "hide-output": false
    },
@@ -411,10 +431,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "402c6537",
+   "id": "203cd514",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#short_path_ex1)\n",
+    "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#short_path_ex1)\n",
     "\n",
     "First let’s write a function that reads in the graph data above and builds a distance matrix."
    ]
@@ -422,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eb869aa",
+   "id": "2575d619",
    "metadata": {
     "hide-output": false
    },
@@ -452,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f118587b",
+   "id": "07357f2a",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -461,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c53716c",
+   "id": "ea6d4f69",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c12d5d15",
+   "id": "fbd8168c",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -505,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83b54bf9",
+   "id": "93677128",
    "metadata": {
     "hide-output": false
    },
@@ -526,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78a6050c",
+   "id": "342c9b82",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -535,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7c27536",
+   "id": "ab39dc30",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd70b406",
+   "id": "d95732f4",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -555,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcf5819c",
+   "id": "8902110d",
    "metadata": {
     "hide-output": false
    },
@@ -569,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "623b25d6",
+   "id": "58960bdb",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b57c2d0",
+   "id": "8652aaf7",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d68c01fb",
+   "id": "0a197838",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -602,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3f824ef",
+   "id": "c5648d6b",
    "metadata": {
     "hide-output": false
    },
@@ -613,7 +633,7 @@
   }
  ],
  "metadata": {
-  "date": 1683608798.6460943,
+  "date": 1684236579.1314125,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
