--- a/wealth_dynamics.ipynb
+++ b/wealth_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e0445e65",
+   "id": "c474447f",
    "metadata": {},
    "source": [
     "# Wealth Distribution Dynamics"
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "208546dd",
+   "id": "fa71d1c6",
    "metadata": {},
    "source": [
     "# GPU\n",
     "\n",
-    "This lecture is accelerated via [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU and JAX for GPU programming.\n",
+    "This lecture was built using [hardware](https://jax.quantecon.org/status.html#status-machine-details) that has access to a GPU.\n",
     "\n",
-    "Free GPUs are available on Google Colab. To use this option, please click on the play icon top right, select Colab, and set the runtime environment to include a GPU.\n",
+    "To run this lecture on [Google Colab](https://colab.research.google.com/), click on the “play” icon top right, select Colab, and set the runtime environment to include a GPU.\n",
     "\n",
-    "Alternatively, if you have your own GPU, you can follow the [instructions](https://github.com/google/jax) for installing JAX with GPU support. If you would like to install JAX running on the `cpu` only you can use `pip install jax[cpu]`\n",
+    "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
     "\n",
     "This lecture is the extended JAX implementation of [this lecture](https://python.quantecon.org/wealth_dynamics.html).\n",
     "\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a40a12",
+   "id": "0e84d441",
    "metadata": {
     "hide-output": false
    },
@@ -45,16 +45,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c66b80ba",
+   "id": "52447301",
    "metadata": {},
    "source": [
-    "Let’s check the hardware we are running on:"
+    "Let’s check the GPU we are running"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2082aea2",
+   "id": "1b35ad15",
    "metadata": {
     "hide-output": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04bd17db",
+   "id": "e9fe5e6f",
    "metadata": {},
    "source": [
     "## Lorenz Curves and the Gini Coefficient\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff2e92a",
+   "id": "fa52d188",
    "metadata": {},
    "source": [
     "### Lorenz Curves\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f359208e",
+   "id": "0509dfcf",
    "metadata": {
     "hide-output": false
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd58a7f2",
+   "id": "6c656f4d",
    "metadata": {},
    "source": [
     "Let’s suppose that"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ef42c07",
+   "id": "da9d751d",
    "metadata": {
     "hide-output": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc1a36f0",
+   "id": "45c654d0",
    "metadata": {},
    "source": [
     "is data representing the wealth of 10,000 households.\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74862c9c",
+   "id": "6679a6ed",
    "metadata": {
     "hide-output": false
    },
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da00655f",
+   "id": "21b27aad",
    "metadata": {
     "hide-output": false
    },
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c336311",
+   "id": "a6cfa89f",
    "metadata": {
     "hide-output": false
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c6d9241",
+   "id": "50fbbdec",
    "metadata": {},
    "source": [
     "Here is another example, which shows how the Lorenz curve shifts as the\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b52326dd",
+   "id": "72154572",
    "metadata": {
     "hide-output": false
    },
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20f3fe45",
+   "id": "09036882",
    "metadata": {
     "hide-output": false
    },
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a884b952",
+   "id": "114ceeb9",
    "metadata": {},
    "source": [
     "You can see that, as the tail parameter of the Pareto distribution increases, inequality decreases.\n",
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab09e2f8",
+   "id": "bdf05bb3",
    "metadata": {},
    "source": [
     "### The Gini Coefficient\n",
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c81c000",
+   "id": "945db299",
    "metadata": {
     "hide-output": false
    },
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9d4c9b2",
+   "id": "6305ce84",
    "metadata": {},
    "source": [
     "Let’s see if the Gini coefficient computed from a simulated sample matches\n",
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "781d2006",
+   "id": "b5dfca87",
    "metadata": {
     "hide-output": false
    },
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68d91bdb",
+   "id": "cd72c376",
    "metadata": {
     "hide-output": false
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "223de3e1",
+   "id": "3385cb53",
    "metadata": {},
    "source": [
     "The simulation shows that the fit is good."
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac8124ea",
+   "id": "570a57b3",
    "metadata": {},
    "source": [
     "## A Model of Wealth Dynamics\n",
@@ -352,7 +352,7 @@
     "\n",
     "<a id='equation-wealth-dynam-ah'></a>\n",
     "$$\n",
-    "w_{t+1} = (1 + r_{t+1}) s(w_t) + y_{t+1} \\tag{6.1}\n",
+    "w_{t+1} = (1 + r_{t+1}) s(w_t) + y_{t+1} \\tag{7.1}\n",
     "$$\n",
     "\n",
     "where\n",
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19214765",
+   "id": "d7bc004f",
    "metadata": {},
    "source": [
     "## Implementation using JAX\n",
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f0f4d6c",
+   "id": "2071c8a6",
    "metadata": {
     "hide-output": false
    },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e5b8a7d",
+   "id": "fe2e70b2",
    "metadata": {},
    "source": [
     "Here’s a function to create the Model with the given parameters"
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4be4e44",
+   "id": "debec63c",
    "metadata": {
     "hide-output": false
    },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a569e4e",
+   "id": "18ae663e",
    "metadata": {},
    "source": [
     "The following function updates one period with the given current wealth and persistent state."
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7839ffc9",
+   "id": "50c36d12",
    "metadata": {
     "hide-output": false
    },
@@ -472,16 +472,12 @@
     "    R = wdy.c_r * jnp.exp(zp) + jnp.exp(\n",
     "                        wdy.μ_r + wdy.σ_r * jax.random.normal(subkey[1], shape=size))\n",
     "    wp += (w >= wdy.w_hat) * R * wdy.s_0 * w\n",
-    "    return wp, zp\n",
-    "\n",
-    "\n",
-    "# Create the jit function\n",
-    "update_states_jax = jax.jit(update_states_jax, static_argnums=(2,))"
+    "    return wp, zp"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d6e978aa",
+   "id": "8236962b",
    "metadata": {},
    "source": [
     "Here’s function to simulate the time series of wealth for individual households using a `for` loop and JAX."
@@ -490,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23ffafc6",
+   "id": "46625061",
    "metadata": {
     "hide-output": false
    },
@@ -524,17 +520,12 @@
     "    for t in range(n-1):\n",
     "        w_, z = update_states_jax((w[t], z), wdy, size, subkey[t])\n",
     "        w.append(w_)\n",
-    "    return jnp.array(w)\n",
-    "\n",
-    "\n",
-    "# Create the jit function\n",
-    "wealth_time_series_for_loop_jax = jax.jit(wealth_time_series_for_loop_jax,\n",
-    "                                          static_argnums=(1,3,))"
+    "    return jnp.array(w)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5da9f82a",
+   "id": "db21fffc",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution using the above function."
@@ -543,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2da719f4",
+   "id": "c448d437",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4f15feb",
+   "id": "3de0930f",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +562,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9edb82c",
+   "id": "56e5f8ca",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -580,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76751186",
+   "id": "d3286b8b",
    "metadata": {
     "hide-output": false
    },
@@ -589,14 +580,14 @@
     "%%time\n",
     "\n",
     "# 2nd time is expected to be very fast because of JIT\n",
-    "w_jax_result = wealth_time_series_for_loop_jax(wdy.y_mean,\n",
+    "w_jax_result = wealth_time_series_scan_jax(wdy.y_mean,\n",
     "                                               ts_length, wdy, size).block_until_ready()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4e19a50",
+   "id": "e801f643",
    "metadata": {
     "hide-output": false
    },
@@ -609,7 +600,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d8efebf",
+   "id": "90310840",
    "metadata": {},
    "source": [
     "We can further try to optimize and speed up the compile time of the above function by replacing `for` loop with [`jax.lax.scan`](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.scan.html)."
@@ -618,7 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f25c267a",
+   "id": "8d6f8a1f",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "565d2553",
+   "id": "7ec9cc3f",
    "metadata": {},
    "source": [
     "Let’s try simulating the model at different parameter values and investigate the implications for the wealth distribution and also observe the difference in time between `wealth_time_series_jax` and `wealth_time_series_for_loop_jax`."
@@ -673,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e20fba25",
+   "id": "3fa067ee",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +678,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1180449",
+   "id": "00822ebb",
    "metadata": {
     "hide-output": false
    },
@@ -700,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e00a6e0",
+   "id": "a06049b1",
    "metadata": {},
    "source": [
     "Running the above function again will be even faster because of JAX’s JIT."
@@ -709,7 +700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a65c903e",
+   "id": "c19e779c",
    "metadata": {
     "hide-output": false
    },
@@ -718,13 +709,13 @@
     "%%time\n",
     "\n",
     "# 2nd time is expected to be very fast because of JIT\n",
-    "w_jax_result = wealth_time_series_jax(wdy.y_mean, ts_length, wdy, size).block_until_ready()"
+    "w_jax_result = wealth_time_series_for_loop_jax(wdy.y_mean, ts_length, wdy, size).block_until_ready()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29c7ae56",
+   "id": "9e3f62fa",
    "metadata": {
     "hide-output": false
    },
@@ -737,7 +728,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7af44f2",
+   "id": "5b2adeed",
    "metadata": {},
    "source": [
     "Now here’s function to simulate a cross section of households forward in time."
@@ -746,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c5e3090",
+   "id": "06ab8b5d",
    "metadata": {
     "hide-output": false
    },
@@ -776,7 +767,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f2f1bc2",
+   "id": "6a71c99c",
    "metadata": {},
    "source": [
     "## Applications\n",
@@ -787,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "038f4337",
+   "id": "3845fcda",
    "metadata": {},
    "source": [
     "### Inequality Measures\n",
@@ -801,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "183cfd2c",
+   "id": "568d851c",
    "metadata": {
     "hide-output": false
    },
@@ -824,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec936f89",
+   "id": "da9bd5f6",
    "metadata": {},
    "source": [
     "Now we investigate how the Lorenz curves associated with the wealth distribution change as return to savings varies.\n",
@@ -835,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fae383a8",
+   "id": "bb154811",
    "metadata": {
     "hide-output": false
    },
@@ -860,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b46e2b6e",
+   "id": "54f93b57",
    "metadata": {},
    "source": [
     "The Lorenz curve shifts downwards as returns on financial income rise, indicating a rise in inequality.\n",
@@ -871,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2561be01",
+   "id": "309588e8",
    "metadata": {
     "hide-output": false
    },
@@ -886,7 +877,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cb32033",
+   "id": "e2f99d93",
    "metadata": {},
    "source": [
     "Once again, we see that inequality increases as returns on financial income\n",
@@ -899,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e5cde8f",
+   "id": "7eeb6250",
    "metadata": {
     "hide-output": false
    },
@@ -924,7 +915,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "617b7235",
+   "id": "a96d9cc7",
    "metadata": {},
    "source": [
     "We see that greater volatility has the effect of increasing inequality in this model."
@@ -932,7 +923,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "035ebce0",
+   "id": "93122df1",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -940,10 +931,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67a65dc6",
+   "id": "8b1017e4",
    "metadata": {},
    "source": [
-    "## Exercise 6.1\n",
+    "## Exercise 7.1\n",
     "\n",
     "For a wealth or income distribution with Pareto tail, a higher tail index suggests lower inequality.\n",
     "\n",
@@ -965,10 +956,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa53042",
+   "id": "86d75b00",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 6.1](https://jax.quantecon.org/#wd_ex1)\n",
+    "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#wd_ex1)\n",
     "\n",
     "Here is one solution, which produces a good match between theory and\n",
     "simulation."
@@ -977,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1c59112",
+   "id": "dedf76d3",
    "metadata": {
     "hide-output": false
    },
@@ -1001,7 +992,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1545d658",
+   "id": "cd1180e5",
    "metadata": {},
    "source": [
     "In general, for a Pareto distribution, a higher tail index implies less weight\n",
@@ -1014,17 +1005,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "348fc8a9",
+   "id": "607f8985",
    "metadata": {},
    "source": [
-    "## Exercise 6.2\n",
+    "## Exercise 7.2\n",
     "\n",
     "When savings is constant, the wealth process has the same quasi-linear\n",
     "structure as a Kesten process, with multiplicative and additive shocks.\n",
     "\n",
     "The Kesten–Goldie theorem tells us that Kesten processes have Pareto tails under a range of parameterizations.\n",
     "\n",
-    "The theorem does not directly apply here, since savings is not always constant and since the multiplicative and additive terms in [(6.1)](#equation-wealth-dynam-ah) are not IID.\n",
+    "The theorem does not directly apply here, since savings is not always constant and since the multiplicative and additive terms in [(7.1)](#equation-wealth-dynam-ah) are not IID.\n",
     "\n",
     "At the same time, given the similarities, perhaps Pareto tails will arise.\n",
     "\n",
@@ -1039,10 +1030,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2982f627",
+   "id": "426b9d9e",
    "metadata": {},
    "source": [
-    "## Solution to[ Exercise 6.2](https://jax.quantecon.org/#wd_ex2)\n",
+    "## Solution to[ Exercise 7.2](https://jax.quantecon.org/#wd_ex2)\n",
     "\n",
     "First let’s generate the distribution:"
    ]
@@ -1050,7 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5971f7b3",
+   "id": "9132369f",
    "metadata": {
     "hide-output": false
    },
@@ -1067,7 +1058,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e297c261",
+   "id": "a29398a8",
    "metadata": {},
    "source": [
     "Let’s define a function to get the rank data"
@@ -1076,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7bdc3e0",
+   "id": "915495d2",
    "metadata": {
     "hide-output": false
    },
@@ -1092,7 +1083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78847beb",
+   "id": "3fbfa8ea",
    "metadata": {},
    "source": [
     "Now let’s see the rank-size plot:"
@@ -1101,7 +1092,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53fd1085",
+   "id": "03bf88dc",
    "metadata": {
     "hide-output": false
    },
@@ -1119,7 +1110,7 @@
   }
  ],
  "metadata": {
-  "date": 1683608798.7137296,
+  "date": 1684236579.2049017,
   "filename": "wealth_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
