--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ec5bf659",
+   "id": "37bb15eb",
    "metadata": {},
    "source": [
     "\n",
@@ -11,18 +11,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5cec3a64",
+   "id": "ca785f59",
    "metadata": {},
    "source": [
     "# References\n",
     "\n",
     "<a id='id255'></a>\n",
-    "\\[Are08\\] Cristina Arellano. Default risk and income fluctuations in emerging economies. *The American Economic Review*, pages 690–712, 2008."
+    "\\[Are08\\] Cristina Arellano. Default risk and income fluctuations in emerging economies. *The American Economic Review*, pages 690–712, 2008.\n",
+    "\n",
+    "<a id='id184'></a>\n",
+    "\\[Luc78\\] Robert E Lucas, Jr. Asset prices in an exchange economy. *Econometrica: Journal of the Econometric Society*, 46(6):1429–1445, 1978."
    ]
   }
  ],
  "metadata": {
-  "date": 1683608798.7233944,
+  "date": 1684236579.2149107,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
